     accidently start to call update() on files.

   * Don't check branch root when looking for round-tripped revisions that used 
     revision properties. (#294784)

   * Support non-ascii characters in home directories. (#333121)

   * Fix recognizing tags when using wildcard layouts. (#333960)

   * Fetch left-hand side ancestry if it's outside of the prefix in
     svn-import. (#334692)

  PERFORMANCE

   * Significant speed improvements when no (old) tags have to be fetched. Requires 
     InterBranch.pull() patch.

   * The guessed layout is now only stored in the configuration and no longer 
     re-determined every time a repository is accessed.

   * Looking for missing revisions is now done in groups, significantly improving the 
     time spent in the "determining revisions to fetch" step.

   * A simple LRU cache is now used for texts during fetch.

  FEATURES

   * Now prints parent Subversion revision number after successful pull. (#332196)

bzr-svn 0.5.2					2009-02-18

  BUG FIXES

   * Fix installation of cache module.

bzr-svn 0.5.1					2009-02-17

  BUG FIXES

   * Fix parsing of "trunk/tags" style filenames in trunk repository layout 
     handling. (#324970)

   * "bzr push" now also works when creating new branches. "bzr svn-push" 
     has been removed. This requires a patched version of bzr. (#127945)

   * Fixed memory usage and performance bug while iterating over a repository.
     (#318993)

   * When following prefixes, cope with branches copied from outside of the 
     prefix. (#325428)

   * Handle non-mainline history a bit better in dpush. (#329284)

   * Assume that ERR_XML_MALFORMED only occurs for non-Subversion 
     URLs. (#327287)

   * Only upgrade tags for which the revision they point to has been 
     upgraded in svn-upgrade.

   * Fix handling of "unusual" branch paths in sparse logs. (#325727)

  FEATURES

   * Set svn:original-date property when revision properties can be committed.
