@@ -31,6 +31,8 @@ bzr-svn 0.5.3                   UNRELEASED
    * Fetch left-hand side ancestry if it's outside of the prefix in
      svn-import. (#334692)
 
+   * Support pushing kind changes from directory to file. (#335445)
+
   PERFORMANCE
 
    * Significant speed improvements when no (old) tags have to be fetched. Requires 
